# DllInjectionSkeleton

./: CMakeLists.txt  README.md
src/dll-injector/: dll_injector.cc
src/injected/: console.cc  console.h  injected.cc
